# et-tutorials

./: .gitignore  .gitmodules  .lintrunner.toml  LICENSE  README.md
01-run-simple-model/: CMakeLists.txt  README.md  SimpleModel.pte
01-run-simple-model/src/: main.cpp
02-export-simple-model/: README.md  export_simple_model.py  simple_model.py
nanogpt/: BasicSampler.h  BasicTokenizer.h  CMakeLists.txt  README  basic_sampler.h  basic_tokenizer.h  download_json.py  export_nanogpt.py  managed_tensor.h  nanogpt_runner.cpp  test_utils.py
token-filter/: parse_vocab.py  run.sh  test.cpp  tokenizer.h
